Fixed nav-collapse button on hover

--- a/cerulean/bootstrap.css
+++ b/cerulean/bootstrap.css
@@ -3385,6 +3385,16 @@ h6 {
 .navbar .search-query {
   border: 1px solid #2480b6;
 }
+.navbar .nav-collapse > .nav li > a {
+  color: #ffffff;
+}
+.navbar .nav-collapse > .nav li > a:hover {
+  background-color: #2B7CAC;
+}
+.btn-navbar:hover {
+  background-color: #cccccc;
+  background-position: 0 0;
+}
 .control-group.warning > label, .control-group.warning .help-block, .control-group.warning .help-inline {
   color: #dd5600;
 }
