--- a/cerulean/bootswatch.less
+++ b/cerulean/bootswatch.less
@@ -32,6 +32,19 @@ h1,h2,h3,h4,h5,h6 {
 	border: 1px solid darken(@linkColor, 10%);
 }
 
+.navbar .nav-collapse > .nav li > a {
+	color: @white;
+	
+	&:hover {
+		background-color: #2B7CAC;
+	}
+}
+
+.btn-navbar:hover {
+    background-color: darken(@white, 20%);
+    background-position: 0 0;
+}
+
 // FORMS
 // -----------------------------------------------------
 
